--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="/peach-landing/style.scss" />
+    <link rel="stylesheet" href="./peach-landing/style.scss" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soft Line</title>
