--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><img src="./img/logo.svg" alt="logo" /></div>
+      <div class="logo"><img src="/img/logo.svg" alt="logo" /></div>
       <nav>
         <ul>
           <li><p>Облачные решения</p></li>
@@ -37,7 +37,7 @@
         </p>
       </div>
       <div class="images">
-        <div class="1"><img src="./img/30years.svg" alt="fact" /></div>
+        <div class="1"><img src="../img/30years.svg" alt="fact" /></div>
         <div class="2"><img src="./img/4600p.svg" alt="fact" /></div>
         <div class="3"><img src="./img/25cities.svg" alt="fact" /></div>
         <div class="4"><img src="./img/200devs.svg" alt="fact" /></div>
@@ -170,7 +170,7 @@
       <div class="swiper-button-prev"></div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
     <script>
       var swiper = new Swiper('.mySwiper', {
         spaceBetween: 30,
